== Change Log

=== Edge

* Fixed bug where pages were being cached in dev mode. This has been a problem since switching to Rack::Cache. [Jason Garber]
* Snippets are now only accessible to people with the "Designer" role. [John Long]
* Renamed "Developer" role to "Designer". [John Long]
* Invoke sudo on unix systems when installing the gem using rake [John Long]
* Undefine prototype rake tasks in instance mode. [Sean Cribbs]
* Verify that the cache directory exists before trying to store a response. [Sean Cribbs]
* Fix page-part deletion in JS. [Sean Cribbs]
* Don't cache extension-defined javascripts, but do cache the defaults. [Sean Cribbs]
* Fix dev-site behavior when 'dev.host' is configured. [Chris Ricca]
* Use HTML 5 doctype. [John Muhl]
* Concatenate admin javascript files. [John Muhl]
* Use more descriptive page titles. [John Muhl]
* Allow non-standard controller methods for render_region. [Jim Gay]
* Updated to use Radius 0.6.1. [John Long]
* Use root_path instead of "/" on View Site link. [John Long]
* Correct type on content-type and move to more/hide language. [John Long]
* Add some helpful shortcut keys. [Sean Cribbs]
* Implemented "Blade" user-interface. [John Long, Chris Parrish, Daniel Beach, Brandon Mathis, Sean Cribbs, Ben Morrow, John Muhl]

=== 0.8.1 Luster (September 5, 2009)

* Move default cache location to tmp. [Sean Cribbs]
* Upgrade Rails and dataset. [Sean Cribbs]
* Updated README and INSTALL. [John Long]
* Don't use Symbol#to_proc in initializer because ActiveSupport hasn't loaded yet.
* Fix links to Textile reference in the wake of _why's disappearance. [Jason Garber]
* Correct bug when submitting a POST to a cached page. [Sean Cribbs]
* Fix typo in generator for features task. [Jim Gay]
* Page parts may already be marked for destruction, don't explicitly set false. [Kunal Shah]
* Merge latest version of Radius [Kunal Shah]
* Helpers for extension_enabled? [Kunal Shah]
* Respond to show methods with xml rendering [Jeremy Stephens]